--- a/youtube/youtube7p1/youtube6p1.ui
+++ b/youtube/youtube7p1/youtube6p1.ui
@@ -29,6 +29,7 @@
     </property>
     <addaction name="action"/>
     <addaction name="action_5"/>
+    <addaction name="action_3"/>
    </widget>
    <addaction name="menu"/>
   </widget>
@@ -46,6 +47,11 @@
   <action name="action_5">
    <property name="text">
     <string>Октрыть проект</string>
+   </property>
+  </action>
+  <action name="action_3">
+   <property name="text">
+    <string>Выйти из программы</string>
    </property>
   </action>
  </widget>
